Fix black background issue by removing dark mode

--- a/app/global.css
+++ b/app/global.css
@@ -19,20 +19,9 @@
   --sh-entity: #e25a1c;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --sh-class: #4c97f8;
-    --sh-identifier: white;
-    --sh-keyword: #f47067;
-    --sh-string: #0fa295;
-  }
-  html {
-    color-scheme: dark;
-  }
-}
-
 html {
   min-width: 360px;
+  color-scheme: light;
 }
 
 .prose .anchor {
@@ -62,12 +51,6 @@ html {
   content: '#';
 }
 
-@media (prefers-color-scheme: dark) {
-  .prose .anchor:after {
-    color: #404040;
-  }
-}
-
 .prose *:hover > .anchor {
   visibility: visible;
 }
@@ -79,13 +62,6 @@ html {
   font-size: 0.875rem;
   background-color: #fafafa;
   border: 1px solid #e5e5e5;
-}
-
-@media (prefers-color-scheme: dark) {
-  .prose pre {
-    background-color: #171717;
-    border-color: #171717;
-  }
 }
 
 .prose code {
@@ -111,12 +87,6 @@ html {
   margin-top: 1rem;
   margin-bottom: 1rem;
   color: #262626;
-}
-
-@media (prefers-color-scheme: dark) {
-  .prose p {
-    color: #e5e5e5;
-  }
 }
 
 .prose h1 {
